Annee_1/Semestre_6/Technologie_Objet/TP/.svn/pristine/23/23eac6c3194382b27640df626cd29ced30be2c83.svn-base
allumettes/Jouer.java:24: error: constructor Arbitre in class Arbitre cannot be applied to given types;
			Arbitre arbitre = new Arbitre(j1, j2, confiant);
			                  ^
  required: Joueur,Joueur
  found: Joueur,Joueur,Boolean
  reason: actual and formal argument lists differ in length
1 error
